# custom_beelay_iroh_protocol

./: .gitignore  Cargo.toml  README.md
beelay_protocol/: Cargo.toml
beelay_protocol/src/: actor.rs  beelay.rs  beelay_network.rs  lib.rs  messages.rs  primitives.rs  storage_handling.rs
design/: functional_diagram.drawio  overview.md
